# swapi

./: .travis.yml  Cargo.toml  Dockerfile  Procfile  README.md  data1.json  rust-toolchain
.snapcraft/: travis_snapcraft.cfg
snap/: snapcraft.yaml
src/: cli.rs  cli.yml  errors.rs  main.rs
src/actors/: mod.rs
src/dirs/: mod.rs
src/domain/: mod.rs
src/handlers/: mod.rs
