[package]
authors = ["mmacedoeu <contato@mmacedo.eu.org>"]
name = "swapi"
version = "0.1.0"
[dependencies]
actix = "0.5"
app_dirs = "1.2.1"
bytes = "0.4"
crossbeam-channel = "0.1"
derive-error-chain = "0.11"
env_logger = "0.5"
error-chain = "0.11"
failure = "0.1"
futures = "0.1"
log = "0.4"
lru_time_cache = "0.8"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
flame = { version = "0.2.2", optional = true }
flamer = { version = "^0.2.1", optional = true }

[dependencies.actix-web]
default_features = false
features = ["tls", "flate2-rust", "brotli"]
version = "0.6"

[dependencies.clap]
features = ["yaml"]
version = "2.31"

[dependencies.mentat]
git = "https://github.com/mozilla/mentat"

[dependencies.pikkr]
git = "https://github.com/pikkr/pikkr.git"

[dependencies.uuid]
features = ["v4", "serde"]
version = "0.5"

[features]
default = []
flame_it = ["flame", "flamer"]

[profile.release]
lto = true
opt-level = 3
codegen-units = 1